@@ -24,7 +24,7 @@ Gabriele "matrix" Gristina <matrix@hashcat.net> (@gm4tr1x)
 * Apple macOS port
 * Apple Silicon support
 * Hardware monitor initial code base and maintenance
-* Test suite initial code base
+* Test suite initial code base and maintenance
 * Makefile initial code base
 * Multithreading initial code base
 * MultiGPU initial code base
