@@ -44,6 +44,12 @@
 - HIP Backend: moved functions to ext_hip.c/ext_hiprtc.c and includes to ext_hip.h/ext_hiprtc.h
 - CUDA Backend: moved functions to ext_cuda.c/ext_nvrtc.c and includes to ext_cuda.h/ext_nvrtc.h
 - Makefile: updated MACOSX_DEPLOYMENT_TARGET to 10.15 and removed OpenCL framework from LFLAGS_NATIVE on MacOS
+- Added new exit status code: if the engine skips the hash due to a runtime/driver issue, hashcat will terminate with exit code -2
+- Unit tests: added -r (--runtime) option
+- Unit tests: added new status "Skip" to test.sh output
+- Unit tests: updated cryptoloop/truecrypt/veracrypt/luks test output
+- Unit tests: skip some hash-types due to some known problems with perl modules
+- Unit tests: skip deprecated hash-types
 
 * changes v6.2.4 -> v6.2.5
 
